--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -71,35 +71,62 @@
     </style>
 </head>
 <body>
-    <h1>Product Page</h1>
+    <h1>Welcome to shopping spot!</h1>
+    <h2>Sales live</h2>
     <div class="product-container">
         <div class="product-card">
-            <img src="https://images.somethinc.com/uploads/products/thumbs/800x800/COVER_PAKET_MAKE_UP_MINIS_PAKET_BASIC_MAKEUP_KIT.jpg" alt="Product 1" class="product-image">
-            <h2 class="product-title">Product 1</h2>
-            <p class="product-price">$49.99</p>
-            <button class="cart-btn" onclick="addToCart('Product 1', 49.99)">Add to Cart</button>
-            <button class="buy-btn" onclick="buyNow('Product 1', 49.99)">Buy Now</button>
+            <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?auto=format&fit=crop&q=80&w=800" alt="Watch" class="product-image">
+            <h2 class="product-title">Premium Chronograph Watch</h2>
+            <p class="product-price"> ₹4999.99</p>
+            <p>Experience unparalleled craftsmanship with our Premium Chronograph Watch. Features include:</p>
+            <ul>
+                <li>Swiss-made movement</li>
+                <li>Sapphire crystal glass</li>
+                <li>Water-resistant up to 100m</li>
+                <li>Genuine leather strap</li>
+                <li>2-year warranty</li>
+            </ul>
+            <button class="cart-btn" onclick="addToCart('Product 1', 4999.99)">Add to Cart</button>
+            <button class="buy-btn" onclick="buyNow('Product 1', 4999.99)">Buy Now</button>
         </div>
         <div class="product-card">
-            <img src="https://tse1.mm.bing.net/th?id=OIP.FpREdW7wONbQl-6lN9n6iwHaHa&pid=Api&P=0&h=180" alt="Product 2" class="product-image">
-            <h2 class="product-title">Product 2</h2>
-            <p class="product-price">$79.99</p>
-            <button class="cart-btn" onclick="addToCart('Product 2', 79.99)">Add to Cart</button>
-            <button class="buy-btn" onclick="buyNow('Product 2', 79.99)">Buy Now</button>
+            <img src="https://images.unsplash.com/photo-1572635196237-14b3f281503f?auto=format&fit=crop&q=80&w=80" alt="Glasses" class="product-image">
+            <h2 class="product-title">Premium Chronograph Glasses</h2>
+            <p class="product-price"> ₹790.99</p>
+            <p>Experience unparalleled craftsmanship with our Premium Chronograph Watch. Features include:</p>
+            <ul>
+                <li>Swiss-made movement</li>
+                <li>Strong lens glass</li>
+                <li>Water-resistant</li>
+                <li>Genuine frame quality</li>
+                <li>2-year warranty</li>
+            </ul>
+
+            <button class="cart-btn" onclick="addToCart('Product 2', 790.99)">Add to Cart</button>
+            <button class="buy-btn" onclick="buyNow('Product 2', 790.99)">Buy Now</button>
         </div>
         <div class="product-card">
-            <img src="https://down-ph.img.susercontent.com/file/cfa2ef1bd42d54f3c88d0d165f0cccb5" alt="Product 3" class="product-image">
-            <h2 class="product-title">Product 3</h2>
-            <p class="product-price">$99.99</p>
-            <button class="cart-btn" onclick="addToCart('Product 3', 99.99)">Add to Cart</button>
-            <button class="buy-btn" onclick="buyNow('Product 3', 99.99)">Buy Now</button>
+            <img src="https://images.unsplash.com/photo-1546868871-7041f2a55e12?auto=format&fit=crop&q=80&w=800" alt="Watch 2" class="product-image">
+            <h2 class="product-title">Premium Chronograph black Watch</h2>
+            <p class="product-price"> ₹9999.99</p>
+            <p>Experience unparalleled craftsmanship with our Premium Chronograph Watch. Features include:</p>
+            <ul>
+                <li>Swiss-made movement</li>
+                <li>Sapphire crystal glass</li>
+                <li>Water-resistant up to 100m</li>
+                <li>Genuine leather strap</li>
+                <li>2-year warranty</li>
+            </ul>
+
+            <button class="cart-btn" onclick="addToCart('Product 3', 9999.99)">Add to Cart</button>
+            <button class="buy-btn" onclick="buyNow('Product 3', 9999.99)">Buy Now</button>
         </div>
     </div>
     
     <div class="cart-container">
         <h2>Shopping Cart</h2>
         <ul id="cart-items"></ul>
-        <p><strong>Total:</strong> $<span id="cart-total">0.00</span></p>
+        <p><strong>Total:</strong> ₹<span id="cart-total">0.00</span></p>
         <button class="buy-all-btn" onclick="buyAll()">Buy All</button>
     </div>
 
@@ -115,14 +142,14 @@
             cartList.innerHTML = '';
             cart.forEach(item => {
                 let listItem = document.createElement('li');
-                listItem.textContent = `${item.product} - $${item.price.toFixed(2)}`;
+                listItem.textContent = `${item.product} - ₹${item.price.toFixed(2)}`;
                 cartList.appendChild(listItem);
                 totalPrice += item.price;
             });
             document.getElementById('cart-total').textContent = totalPrice.toFixed(2);
         }
         function buyNow(product, price) {
-            alert(`Proceeding to checkout for ${product} - $${price.toFixed(2)}`);
+            alert(`Proceeding to checkout for ${product} - ₹${price.toFixed(2)}`);
         }
         function buyAll() {
             if (cart.length === 0) {
@@ -130,7 +157,7 @@
                 return;
             }
             let totalAmount = cart.reduce((sum, item) => sum + item.price, 0);
-            alert(`Proceeding to checkout for all items. Total: $${totalAmount.toFixed(2)}`);
+            alert(`Proceeding to checkout for all items. Total: ₹${totalAmount.toFixed(2)}`);
             cart = [];
             updateCart();
         }
